kube/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: jenkins-home
        emptyDir: { }
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
