kube/node-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-api
  name: node-api
spec:
  type: NodePort
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
    nodePort: 30007
  selector:
    app: node-api
status:
  loadBalancer: {}
