kube/node-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-node-api
spec:
  rules:
  - host: "xmatheuslopes.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-api
            port:
              number: 8080
